--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -30,8 +30,13 @@
                             <img src="images/icon-comment.png" alt="" class="icon">
                             <img src="images/icon-dm.png" alt="" class="icon">
                         </div>
-                        <p><span id="likes"></span>Likes</p>
-                        <p class="caption" id="caption"></p>
+                        <p>
+                            <span id="likes">12,558</span> likes
+                        </p>
+                        <p>
+                            <span id="user-name">num</span>
+                            <span id="caption">Lorem ipsum dolor sit amet</span>
+                        </p>
                     </div>
                 </div>
             </div>
